# wit-bindgen

./: Cargo.toml  demo.d.ts  demo.js  demo.wasm  main.js
crates/gen-rust/: Cargo.toml
crates/gen-tinygo/: Cargo.toml
crates/gen-tinygo/src/: lib.rs
crates/gen-tinygo/tests/: codegen.rs
crates/test-helpers/: Cargo.toml
crates/test-helpers/src/: lib.rs
