[package]
name = "wit-bindgen-gen-tinygo"
version = "0.1.0"
authors = ["Jagger De Leo <jagger@suborbital.dev>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
wit-bindgen-gen-core = { path = '../gen-core' }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
test-helpers = { path = '../test-helpers', features = ['wit-bindgen-gen-tinygo'] }
